--- a/index.html
+++ b/index.html
@@ -8,38 +8,48 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Your Minecraft Server</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#vote">Vote</a></li>
-                <li><a href="#ip">Server IP</a></li>
-                <li><a href="#info">Info</a></li>
-            </ul>
-        </nav>
+        <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
+        <h1>Your Minecraft Server</h1>
     </header>
 
-    <section id="home">
-        <h2>Home</h2>
-        <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
-    </section>
+    <nav id="sidebar" class="sidebar">
+        <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
+        <a href="#home">Home</a>
+        <a href="#discord">Discord</a>
+        <a href="#ip">Server IP</a>
+        <a href="#vote">Vote</a>
+        <a href="#info">Info</a>
+    </nav>
 
-    <section id="vote">
-        <h2>Vote</h2>
-        <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
-        <button onclick="vote()">Vote Now</button>
-    </section>
+    <div id="main-content">
+        <section id="home">
+            <h2>Home</h2>
+            <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
+        </section>
 
-    <section id="ip">
-        <h2>Server IP</h2>
-        <p>Connect to our server with the following IP:</p>
-        <p><strong>play.yourserver.com</strong></p>
-    </section>
+        <section id="discord">
+            <h2>Discord</h2>
+            <p>Join our Discord community for the latest updates and chat with other players.</p>
+            <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+        </section>
 
-    <section id="info">
-        <h2>Server Info</h2>
-        <p>Learn more about our server, rules, and community.</p>
-    </section>
+        <section id="ip">
+            <h2>Server IP</h2>
+            <p>Connect to our server with the following IP:</p>
+            <p><strong>play.yourserver.com</strong></p>
+        </section>
+
+        <section id="vote">
+            <h2>Vote</h2>
+            <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
+            <button onclick="vote()">Vote Now</button>
+        </section>
+
+        <section id="info">
+            <h2>Server Info</h2>
+            <p>Learn more about our server, rules, and community.</p>
+        </section>
+    </div>
 
     <footer>
         <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
