--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
         <a href="#home">Home</a>
-        <a href="#discord">Discord</a>
+        <a href="https://discord.com/invite/yourdiscord" target="_blank">Discord</a>
         <a href="#ip">Server IP</a>
-        <a href="#vote">Vote</a>
+        <a href="https://votingsite.com" target="_blank">Vote</a>
         <a href="#info">Info</a>
     </nav>
 
@@ -42,7 +42,7 @@
         <section id="vote">
             <h2>Vote</h2>
             <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
-            <button onclick="vote()">Vote Now</button>
+            <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
         </section>
 
         <section id="info">
