--- a/index.html
+++ b/index.html
@@ -14,41 +14,15 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="#home">Home</a>
-        <a href="https://discord.com/invite/yourdiscord" target="_blank">Discord</a>
-        <a href="#ip">Server IP</a>
-        <a href="https://votingsite.com" target="_blank">Vote</a>
-        <a href="#info">Info</a>
+        <a href="/home">Home</a>
+        <a href="/discord">Discord</a>
+        <a href="/ip">Server IP</a>
+        <a href="/vote">Vote</a>
+        <a href="/info">Info</a>
     </nav>
 
     <div id="main-content">
-        <section id="home">
-            <h2>Home</h2>
-            <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
-        </section>
-
-        <section id="discord">
-            <h2>Discord</h2>
-            <p>Join our Discord community for the latest updates and chat with other players.</p>
-            <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
-        </section>
-
-        <section id="ip">
-            <h2>Server IP</h2>
-            <p>Connect to our server with the following IP:</p>
-            <p><strong>play.yourserver.com</strong></p>
-        </section>
-
-        <section id="vote">
-            <h2>Vote</h2>
-            <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
-            <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
-        </section>
-
-        <section id="info">
-            <h2>Server Info</h2>
-            <p>Learn more about our server, rules, and community.</p>
-        </section>
+        <!-- Content will be dynamically loaded based on the route -->
     </div>
 
     <footer>
