--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Minecraft Server</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -14,21 +14,25 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="/home" onclick="navigate(event, '/home')">Home</a>
-        <a href="/discord" onclick="navigate(event, '/discord')">Discord</a>
-        <a href="/ip" onclick="navigate(event, '/ip')">Server IP</a>
-        <a href="/vote" onclick="navigate(event, '/vote')">Vote</a>
-        <a href="/info" onclick="navigate(event, '/info')">Info</a>
+        <a href="pages/home.html">Home</a>
+        <a href="pages/discord.html">Discord</a>
+        <a href="pages/ip.html">Server IP</a>
+        <a href="pages/vote.html">Vote</a>
+        <a href="pages/info.html">Info</a>
     </nav>
 
     <div id="main-content">
-        <!-- Content will be dynamically loaded here -->
+        <!-- Default content, or you can load 'home.html' by default -->
+        <section>
+            <h2>Welcome</h2>
+            <p>Welcome to the best Minecraft server! Use the menu to navigate through the site.</p>
+        </section>
     </div>
 
     <footer>
         <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
