--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Minecraft Server</title>
+    <title>Home - Your Minecraft Server</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
-        <h1>Your Minecraft Server</h1>
+        <h1>Home</h1>
     </header>
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="pages/home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="pages/discord.html">Discord</a>
         <a href="pages/ip.html">Server IP</a>
         <a href="pages/vote.html">Vote</a>
@@ -22,10 +22,9 @@
     </nav>
 
     <div id="main-content">
-        <!-- Default content, or you can load 'home.html' by default -->
         <section>
-            <h2>Welcome</h2>
-            <p>Welcome to the best Minecraft server! Use the menu to navigate through the site.</p>
+            <h2>Home</h2>
+            <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
         </section>
     </div>
 
