--- a/pages/discord.html
+++ b/pages/discord.html
@@ -8,17 +8,31 @@
 </head>
 <body>
     <header>
+        <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
         <h1>Discord</h1>
     </header>
 
-    <section>
-        <h2>Discord</h2>
-        <p>Join our Discord community for the latest updates and chat with other players.</p>
-        <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
-    </section>
+    <nav id="sidebar" class="sidebar">
+        <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
+        <a href="../index.html">Home</a>
+        <a href="discord.html">Discord</a>
+        <a href="ip.html">Server IP</a>
+        <a href="vote.html">Vote</a>
+        <a href="info.html">Info</a>
+    </nav>
+
+    <div id="main-content">
+        <section>
+            <h2>Discord</h2>
+            <p>Join our Discord community for the latest updates and chat with other players.</p>
+            <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+        </section>
+    </div>
 
     <footer>
         <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
     </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
