--- a/pages/info.html
+++ b/pages/info.html
@@ -8,16 +8,30 @@
 </head>
 <body>
     <header>
+        <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
         <h1>Info</h1>
     </header>
 
-    <section>
-        <h2>Server Info</h2>
-        <p>Learn more about our server, rules, and community.</p>
-    </section>
+    <nav id="sidebar" class="sidebar">
+        <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
+        <a href="../index.html">Home</a>
+        <a href="discord.html">Discord</a>
+        <a href="ip.html">Server IP</a>
+        <a href="vote.html">Vote</a>
+        <a href="info.html">Info</a>
+    </nav>
+
+    <div id="main-content">
+        <section>
+            <h2>Server Info</h2>
+            <p>Learn more about our server, rules, and community.</p>
+        </section>
+    </div>
 
     <footer>
         <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
     </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
