--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="index.html">Home</a>
-        <a href="pages/discord.html">Discord</a>
-        <a href="pages/ip.html">Server IP</a>
-        <a href="pages/vote.html">Vote</a>
-        <a href="pages/info.html">Info</a>
+        <a href="home">Home</a>
+        <a href="discord">Discord</a>
+        <a href="ip">Server IP</a>
+        <a href="vote">Vote</a>
+        <a href="info">Info</a>
     </nav>
 
     <div id="main-content">
