--- a/pages/discord.html
+++ b/pages/discord.html
@@ -14,18 +14,20 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="../index.html">Home</a>
-        <a href="discord.html">Discord</a>
-        <a href="ip.html">Server IP</a>
-        <a href="vote.html">Vote</a>
-        <a href="info.html">Info</a>
+        <a href="../home">Home</a>
+        <a href="../discord">Discord</a>
+        <a href="../ip">Server IP</a>
+        <a href="../vote">Vote</a>
+        <a href="../info">Info</a>
     </nav>
 
     <div id="main-content">
         <section>
             <h2>Discord</h2>
             <p>Join our Discord community for the latest updates and chat with other players.</p>
-            <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+            <div class="center">
+                <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+            </div>
         </section>
     </div>
 
