--- a/pages/discord.html
+++ b/pages/discord.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord - Your Minecraft Server</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -14,20 +14,18 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="../home">Home</a>
-        <a href="../discord">Discord</a>
-        <a href="../ip">Server IP</a>
-        <a href="../vote">Vote</a>
-        <a href="../info">Info</a>
+        <a href="home.html">Home</a>
+        <a href="discord.html">Discord</a>
+        <a href="ip.html">Server IP</a>
+        <a href="vote.html">Vote</a>
+        <a href="info.html">Info</a>
     </nav>
 
     <div id="main-content">
-        <section>
+        <section class="centered">
             <h2>Discord</h2>
             <p>Join our Discord community for the latest updates and chat with other players.</p>
-            <div class="center">
-                <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
-            </div>
+            <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
         </section>
     </div>
 
@@ -35,6 +33,6 @@
         <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
