--- a/pages/ip.html
+++ b/pages/ip.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server IP - Your Minecraft Server</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="../index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="discord.html">Discord</a>
         <a href="ip.html">Server IP</a>
         <a href="vote.html">Vote</a>
@@ -33,6 +33,6 @@
         <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
