--- a/pages/discord.html
+++ b/pages/discord.html
@@ -22,10 +22,12 @@
     </nav>
 
     <div id="main-content">
-        <section class="centered">
+        <section>
             <h2>Discord</h2>
             <p>Join our Discord community for the latest updates and chat with other players.</p>
-            <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+            <div class="center-button">
+                <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+            </div>
         </section>
     </div>
 
