--- a/pages/vote.html
+++ b/pages/vote.html
@@ -22,10 +22,12 @@
     </nav>
 
     <div id="main-content">
-        <section class="centered">
+        <section>
             <h2>Vote</h2>
             <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
-            <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
+            <div class="center-button">
+                <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
+            </div>
         </section>
     </div>
 
