--- a/index.html
+++ b/index.html
@@ -3,28 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Your Minecraft Server</title>
+    <title>Your Minecraft Server</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body onload="initializePage()">
     <header>
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
-        <h1>Home</h1>
+        <h1>Your Minecraft Server</h1>
     </header>
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="home.html">Home</a>
-        <a href="discord.html">Discord</a>
-        <a href="ip.html">Server IP</a>
-        <a href="vote.html">Vote</a>
-        <a href="info.html">Info</a>
+        <a href="?page=home" onclick="showPage('home')">Home</a>
+        <a href="?page=discord" onclick="showPage('discord')">Discord</a>
+        <a href="?page=ip" onclick="showPage('ip')">Server IP</a>
+        <a href="?page=vote" onclick="showPage('vote')">Vote</a>
+        <a href="?page=info" onclick="showPage('info')">Info</a>
     </nav>
 
     <div id="main-content">
-        <section>
+        <section id="home" class="page">
             <h2>Home</h2>
             <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
+        </section>
+
+        <section id="discord" class="page" style="display: none;">
+            <h2>Discord</h2>
+            <p>Join our Discord community for the latest updates and chat with other players.</p>
+            <div class="center-button">
+                <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+            </div>
+        </section>
+
+        <section id="ip" class="page" style="display: none;">
+            <h2>Server IP</h2>
+            <p>Connect to our server with the following IP:</p>
+            <p><strong>play.yourserver.com</strong></p>
+        </section>
+
+        <section id="vote" class="page" style="display: none;">
+            <h2>Vote</h2>
+            <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
+            <div class="center-button">
+                <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
+            </div>
+        </section>
+
+        <section id="info" class="page" style="display: none;">
+            <h2>Info</h2>
+            <p>Learn more about our server, rules, and community.</p>
         </section>
     </div>
 
