--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="?page=home" onclick="showPage('home')">Home</a>
-        <a href="?page=discord" onclick="showPage('discord')">Discord</a>
-        <a href="?page=ip" onclick="showPage('ip')">Server IP</a>
-        <a href="?page=vote" onclick="showPage('vote')">Vote</a>
-        <a href="?page=info" onclick="showPage('info')">Info</a>
+        <a href="/home" onclick="navigateToPage('home')">Home</a>
+        <a href="/discord" onclick="navigateToPage('discord')">Discord</a>
+        <a href="/ip" onclick="navigateToPage('ip')">Server IP</a>
+        <a href="/vote" onclick="navigateToPage('vote')">Vote</a>
+        <a href="/info" onclick="navigateToPage('info')">Info</a>
     </nav>
 
     <div id="main-content">
