--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Your Minecraft Server</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body onload="initializePage()">
+<body>
     <header>
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
         <h1>Your Minecraft Server</h1>
@@ -14,11 +14,11 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="/home" onclick="navigateToPage('home')">Home</a>
-        <a href="/discord" onclick="navigateToPage('discord')">Discord</a>
-        <a href="/ip" onclick="navigateToPage('ip')">Server IP</a>
-        <a href="/vote" onclick="navigateToPage('vote')">Vote</a>
-        <a href="/info" onclick="navigateToPage('info')">Info</a>
+        <a href="home" onclick="navigateToPage('home')">Home</a>
+        <a href="discord" onclick="navigateToPage('discord')">Discord</a>
+        <a href="ip" onclick="navigateToPage('ip')">Server IP</a>
+        <a href="vote" onclick="navigateToPage('vote')">Vote</a>
+        <a href="info" onclick="navigateToPage('info')">Info</a>
     </nav>
 
     <div id="main-content">
@@ -61,4 +61,5 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+                                                       </html>
+                                                       
