--- a/index.html
+++ b/index.html
@@ -9,50 +9,20 @@
 <body>
     <header>
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
-        <h1>Your Minecraft Server</h1>
+        <h1 id="page-title">Home</h1>
     </header>
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="home" onclick="navigateToPage('home')">Home</a>
-        <a href="discord" onclick="navigateToPage('discord')">Discord</a>
-        <a href="ip" onclick="navigateToPage('ip')">Server IP</a>
-        <a href="vote" onclick="navigateToPage('vote')">Vote</a>
-        <a href="info" onclick="navigateToPage('info')">Info</a>
+        <a href="#" onclick="loadPage('home')">Home</a>
+        <a href="#" onclick="loadPage('discord')">Discord</a>
+        <a href="#" onclick="loadPage('ip')">Server IP</a>
+        <a href="#" onclick="loadPage('vote')">Vote</a>
+        <a href="#" onclick="loadPage('info')">Info</a>
     </nav>
 
     <div id="main-content">
-        <section id="home" class="page">
-            <h2>Home</h2>
-            <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
-        </section>
-
-        <section id="discord" class="page" style="display: none;">
-            <h2>Discord</h2>
-            <p>Join our Discord community for the latest updates and chat with other players.</p>
-            <div class="center-button">
-                <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
-            </div>
-        </section>
-
-        <section id="ip" class="page" style="display: none;">
-            <h2>Server IP</h2>
-            <p>Connect to our server with the following IP:</p>
-            <p><strong>play.yourserver.com</strong></p>
-        </section>
-
-        <section id="vote" class="page" style="display: none;">
-            <h2>Vote</h2>
-            <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
-            <div class="center-button">
-                <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
-            </div>
-        </section>
-
-        <section id="info" class="page" style="display: none;">
-            <h2>Info</h2>
-            <p>Learn more about our server, rules, and community.</p>
-        </section>
+        <!-- Content will be dynamically loaded here -->
     </div>
 
     <footer>
@@ -61,5 +31,4 @@
 
     <script src="js/script.js"></script>
 </body>
-                                                       </html>
-                                                       
+</html>
