--- a/discord.html
+++ b/discord.html
@@ -14,7 +14,7 @@
 
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
-        <a href="index.html">Home</a>
+        <a href="home">Home</a>
         <a href="discord.html">Discord</a>
         <a href="ip.html">Server IP</a>
         <a href="vote.html">Vote</a>
