--- a/discord.html
+++ b/discord.html
@@ -15,10 +15,10 @@
     <nav id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleMenu()">&times;</a>
         <a href="home">Home</a>
-        <a href="discord.html">Discord</a>
-        <a href="ip.html">Server IP</a>
-        <a href="vote.html">Vote</a>
-        <a href="info.html">Info</a>
+        <a href="discord">Discord</a>
+        <a href="ip">Server IP</a>
+        <a href="vote">Vote</a>
+        <a href="info">Info</a>
     </nav>
 
     <div id="main-content">
