--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
+        <p>&copy; 2024 LightLand. All rights reserved.</p>
     </footer>
 
     <script src="../js/script.js"></script>
