--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info - Your Minecraft Server</title>
+    <title>Info - LightLand</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
+        <p>&copy; 2024 LightLand. All rights reserved.</p>
     </footer>
 
     <script src="../js/script.js"></script>
