--- a/ip.html
+++ b/ip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server IP - Your Minecraft Server</title>
+    <title>Server IP - LightLand</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -25,12 +25,12 @@
         <section>
             <h2>Server IP</h2>
             <p>Connect to our server with the following IP:</p>
-            <p><strong>play.yourserver.com</strong></p>
+            <p><strong>play.example.com</strong></p>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
+        <p>&copy; 2024 LightLand. All rights reserved.</p>
     </footer>
 
     <script src="../js/script.js"></script>
