--- a/vote.html
+++ b/vote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vote - Your Minecraft Server</title>
+    <title>Vote - LightLand</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -32,7 +32,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Minecraft Server. All rights reserved.</p>
+        <p>&copy; 2024 LightLand. All rights reserved.</p>
     </footer>
 
     <script src="../js/script.js"></script>
