--- a/home.html
+++ b/home.html
@@ -23,8 +23,14 @@
 
     <div id="main-content">
         <section>
-            <h2>Home</h2>
-            <p>Welcome to the best Minecraft server! Join us for epic adventures and amazing builds!</p>
+            <h2>Welcome to Craftsman 0.15.10</h2>
+            <p>Welcome to the Craftsman server for Minecraft PE 0.15.10! We offer a variety of exciting game modes for you to enjoy:</p>
+            <ul>
+                <li><strong>LifeSteal:</strong> A thrilling PvP experience where you can steal life from your opponents and survive against all odds.</li>
+                <li><strong>Practice:</strong> Hone your PvP skills in our dedicated practice arenas, perfect your combat techniques, and become a master warrior.</li>
+                <li><strong>Survival:</strong> Explore, build, and survive in a vast world filled with cool features and challenges. Experience Minecraft like never before!</li>
+            </ul>
+            <p>Join us for epic adventures, unique features, and a fantastic community. See you in the game!</p>
         </section>
     </div>
 
