--- a/home.html
+++ b/home.html
@@ -22,15 +22,24 @@
     </nav>
 
     <div id="main-content">
-        <section>
-            <h2>Welcome to Craftsman 0.15.10</h2>
-            <p>Welcome to the Craftsman server for Minecraft PE 0.15.10! We offer a variety of exciting game modes for you to enjoy:</p>
-            <ul>
-                <li><strong>LifeSteal:</strong> A thrilling PvP experience where you can steal life from your opponents and survive against all odds.</li>
-                <li><strong>Practice:</strong> Hone your PvP skills in our dedicated practice arenas, perfect your combat techniques, and become a master warrior.</li>
-                <li><strong>Survival:</strong> Explore, build, and survive in a vast world filled with cool features and challenges. Experience Minecraft like never before!</li>
-            </ul>
-            <p>Join us for epic adventures, unique features, and a fantastic community. See you in the game!</p>
+        <section class="content-section">
+            <h2 class="section-title">Welcome to Craftsman 0.15.10</h2>
+            <p class="intro-text">Dive into the ultimate Minecraft PE 0.15.10 experience! Our server offers an array of exciting game modes that cater to every type of player:</p>
+            <div class="game-modes">
+                <div class="game-mode">
+                    <h3 class="game-title">LifeSteal</h3>
+                    <p class="game-description">Experience the thrill of PvP where you can steal life from your opponents. Survive and thrive in intense battles and dominate the arena!</p>
+                </div>
+                <div class="game-mode">
+                    <h3 class="game-title">Practice</h3>
+                    <p class="game-description">Sharpen your combat skills in our dedicated practice arenas. Perfect your techniques and become a master warrior!</p>
+                </div>
+                <div class="game-mode">
+                    <h3 class="game-title">Survival</h3>
+                    <p class="game-description">Explore a vast world filled with unique features and challenges. Build, survive, and enjoy an immersive Minecraft experience like never before!</p>
+                </div>
+            </div>
+            <p class="footer-text">Join us for epic adventures, exciting features, and a fantastic community. See you in the game!</p>
         </section>
     </div>
 
