--- a/home.html
+++ b/home.html
@@ -40,6 +40,16 @@
                 </div>
             </div>
             <p class="footer-text">Join us for epic adventures, exciting features, and a fantastic community. See you in the game!</p>
+            <div class="additional-links">
+                <h3 class="links-title">Join Us</h3>
+                <p class="links-description">Connect with our community and get involved:</p>
+                <ul class="links-list">
+                    <li><a class="link-button" href="discord">Join our Discord Server</a></li>
+                    <li><a class="link-button" href="vote">Vote for Us</a></li>
+                </ul>
+            </div>
+        </section>
+    </div>
         </section>
     </div>
 
