--- a/vote.html
+++ b/vote.html
@@ -22,11 +22,11 @@
     </nav>
 
     <div id="main-content">
-        <section>
-            <h2>Vote</h2>
-            <p>Help support our server by voting! Click the button below to cast your vote and get rewards!</p>
-            <div class="center-button">
-                <button onclick="window.location.href='https://votingsite.com'">Vote Now</button>
+        <section class="content-section">
+            <h2 class="section-title">Vote for Us</h2>
+            <p class="description-text">Help us grow by voting for our server! Click the button below to vote and show your support.</p>
+            <div class="centered-buttons">
+                <a class="button" href="https://vote.example.com" target="_blank">Vote Now</a>
             </div>
         </section>
     </div>
