--- a/discord.html
+++ b/discord.html
@@ -22,11 +22,11 @@
     </nav>
 
     <div id="main-content">
-        <section>
-            <h2>Discord</h2>
-            <p>Join our Discord community for the latest updates and chat with other players.</p>
-            <div class="center-button">
-                <button onclick="window.location.href='https://discord.com/invite/yourdiscord'">Join Discord</button>
+        <section class="content-section">
+            <h2 class="section-title">Join Our Discord Server</h2>
+            <p class="description-text">Connect with our community, chat with fellow players, and stay updated with the latest server news and events.</p>
+            <div class="centered-buttons">
+                <a class="button" href="https://discord.gg/yourserverlink" target="_blank">Join Discord</a>
             </div>
         </section>
     </div>
