--- a/ip.html
+++ b/ip.html
@@ -22,10 +22,12 @@
     </nav>
 
     <div id="main-content">
-        <section>
-            <h2>Server IP</h2>
-            <p>Connect to our server with the following IP:</p>
-            <p><strong>play.example.com</strong></p>
+        <section class="content-section">
+            <h2 class="section-title">Server IP</h2>
+            <p class="description-text">Click the IP address below to copy it to your clipboard.</p>
+            <div class="centered-buttons">
+                <button class="copy-button" onclick="copyToClipboard()">IP: 123.45.67.89:25565</button>
+            </div>
         </section>
     </div>
 
