--- a/vote.html
+++ b/vote.html
@@ -26,7 +26,7 @@
             <h2 class="section-title">Vote for Us</h2>
             <p class="description-text">Help us grow by voting for our server! Click the button below to vote and show your support.</p>
             <div class="centered-buttons">
-                <a class="button" href="https://vote.example.com" target="_blank">Vote Now</a>
+                <a class="vote-button" href="https://vote.example.com" target="_blank">Vote Now</a>
             </div>
         </section>
     </div>
