--- a/discord.html
+++ b/discord.html
@@ -26,7 +26,7 @@
             <h2 class="section-title">Join Our Discord Server</h2>
             <p class="description-text">Connect with our community, chat with fellow players, and stay updated with the latest server news and events.</p>
             <div class="centered-buttons">
-                <a class="button" href="https://discord.gg/yourserverlink" target="_blank">Join Discord</a>
+                <a class="discord-button" href="https://discord.gg/yourserverlink" target="_blank">Join Discord</a>
             </div>
         </section>
     </div>
