--- a/home.html
+++ b/home.html
@@ -52,6 +52,10 @@
         </section>
 </div>
             <p class="footer-text">Join us for epic adventures, exciting features, and a fantastic community. See you in the game!</p>
+   </div>
+        </section>
+    </div>
+        </section>
 </div>
    <footer>
         <p>&copy; 2024 LightLand. All rights reserved.</p>
