--- a/home.html
+++ b/home.html
@@ -43,21 +43,16 @@
                 <h3 class="links-title">Join Us</h3>
                 <p class="links-description">Connect with our community and get involved:</p>
                 <ul class="links-list">
-                    <li><a class="link-button" href="discord">Join our Discord Server</a></li>
-                    <li><a class="link-button" href="vote">Vote for Us</a></li>
+                    <li><a class="link-button discord-button" href="discord">Join our Discord Server</a></li>
+                    <li><a class="link-button vote-button" href="vote">Vote for Us</a></li>
+                    <li><a class="link-button copy-button" onclick="copyToClipboard('123.45.67.89:25565')">Copy Server IP</a></li>
                 </ul>
             </div>
         </section>
     </div>
-        </section>
-</div>
-            <p class="footer-text">Join us for epic adventures, exciting features, and a fantastic community. See you in the game!</p>
-   </div>
-        </section>
-    </div>
-        </section>
-</div>
-   <footer>
+
+    <footer>
+        <p class="footer-text">Join us for epic adventures, exciting features, and a fantastic community. See you in the game!</p>
         <p>&copy; 2024 LightLand. All rights reserved.</p>
     </footer>
 
