--- a/info.html
+++ b/info.html
@@ -22,9 +22,58 @@
     </nav>
 
     <div id="main-content">
-        <section>
-            <h2>Server Info</h2>
-            <p>Learn more about our server, rules, and community.</p>
+        <section class="content-section">
+            <h2 class="section-title">Server Rules & Guidelines</h2>
+            <p class="intro-text">Follow these rules to ensure a fair and enjoyable experience for everyone:</p>
+            <ul>
+                <li><strong>No Griefing:</strong> Respect other players' builds. Griefing is strictly prohibited.</li>
+                <li><strong>No Cheating:</strong> Hacking, using unauthorized mods, or exploiting game glitches is forbidden.</li>
+                <li><strong>Respect Others:</strong> Treat all players with respect. No harassment or bullying.</li>
+                <li><strong>No Spamming:</strong> Avoid spamming chat with unnecessary messages or caps.</li>
+                <li><strong>No Advertising:</strong> Advertising other servers or services in chat is not allowed.</li>
+                <li><strong>Follow Staff Instructions:</strong> Obey the rules and listen to the staff. They are here to ensure everyone has a great experience.</li>
+            </ul>
+        </section>
+
+        <section class="content-section">
+            <h2 class="section-title">How to Join</h2>
+            <p class="intro-text">Follow these steps to join our server:</p>
+            <ol>
+                <li><strong>Connecting to the Server:</strong>
+                    <ul>
+                        <li>Open Minecraft PE 0.15.10 and navigate to "Play" -> "Servers."</li>
+                        <li>Tap "Add Server" and input the following details:</li>
+                        <li><strong>Server Name:</strong> LightLand</li>
+                        <li><strong>Server Address:</strong> your.server.ip</li>
+                        <li><strong>Port:</strong> default port</li>
+                        <li>Tap "Save" and then tap on the server to connect.</li>
+                    </ul>
+                </li>
+                <li><strong>Setting Up Your Account:</strong>
+                    <ul>
+                        <li>Upon your first login, you may be prompted to register using the `/register` command. Follow the on-screen instructions.</li>
+                        <li>If your account needs a password, create a secure one and remember it. Use the `/login` command to log in during future sessions.</li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+
+        <section class="content-section">
+            <h2 class="section-title">Game Modes Explained</h2>
+            <div class="game-modes">
+                <div class="game-mode">
+                    <h3 class="game-title">LifeSteal</h3>
+                    <p class="game-description">Experience the thrill of PvP where you can steal life from your opponents. Survive and thrive in intense battles and dominate the arena!</p>
+                </div>
+                <div class="game-mode">
+                    <h3 class="game-title">Practice</h3>
+                    <p class="game-description">Sharpen your combat skills in our dedicated practice arenas. Perfect your techniques and become a master warrior!</p>
+                </div>
+                <div class="game-mode">
+                    <h3 class="game-title">Survival</h3>
+                    <p class="game-description">Explore a vast world filled with unique features and challenges. Build, survive, and enjoy an immersive Minecraft experience like never before!</p>
+                </div>
+            </div>
         </section>
     </div>
 
