--- a/dashboard.html
+++ b/dashboard.html
@@ -4,28 +4,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .dashboard-container {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+            width: 400px;
+            text-align: center;
+        }
+
+        .three-dots {
+            cursor: pointer;
+            padding: 5px;
+            font-size: 24px;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            background-color: white;
+            border: 1px solid #ccc;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            top: 50px;
+            right: 20px;
+            z-index: 1000;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 8px;
+            color: black;
+            text-decoration: none;
+        }
+
+        .dropdown a:hover {
+            background-color: #f1f1f1;
+        }
+
+        /* Popup modal style */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .modal-content button {
+            padding: 10px 20px;
+            margin: 10px;
+        }
+
+        h1 {
+            font-size: 24px;
+        }
+    </style>
 </head>
 <body>
-    <div class="form-container">
-        <h1>Hello, <span id="username"></span>!</h1>
-        <button id="logout">Logout</button>
+    <div class="dashboard-container">
+        <h1>Welcome to your Dashboard!</h1>
+        <div class="three-dots">⋮</div>
+        <div class="dropdown" id="dropdownMenu">
+            <a href="#" id="deleteAccountOption">Delete Account</a>
+        </div>
+    </div>
+
+    <!-- Delete confirmation popup -->
+    <div class="modal" id="deleteModal">
+        <div class="modal-content">
+            <p>Are you sure you want to delete your account?</p>
+            <button id="cancelBtn">Cancel</button>
+            <button id="confirmDeleteBtn">Delete</button>
+        </div>
     </div>
 
     <script>
-        const loggedInUser = localStorage.getItem('loggedInUser');
+        // Toggle 3-dot dropdown
+        const threeDots = document.querySelector('.three-dots');
+        const dropdownMenu = document.getElementById('dropdownMenu');
 
-        if (!loggedInUser) {
-            // Redirect to login page if not logged in
+        threeDots.addEventListener('click', () => {
+            dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+        });
+
+        // Handle Delete Account Option click
+        const deleteAccountOption = document.getElementById('deleteAccountOption');
+        const deleteModal = document.getElementById('deleteModal');
+
+        deleteAccountOption.addEventListener('click', () => {
+            deleteModal.style.display = 'flex';
+        });
+
+        // Handle Cancel button in the modal
+        const cancelBtn = document.getElementById('cancelBtn');
+        cancelBtn.addEventListener('click', () => {
+            deleteModal.style.display = 'none';
+        });
+
+        // Handle Confirm Delete button
+        const confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
+        confirmDeleteBtn.addEventListener('click', () => {
+            // Remove all user-related data from localStorage
+            localStorage.removeItem('email');  // Replace 'email' with your actual key names
+            localStorage.removeItem('password');  // Replace 'password' with your actual key names
+            localStorage.clear();  // If you want to clear all localStorage data
+
+            alert('Your account has been deleted successfully!');
+
+            // Optionally redirect to login or home page
             window.location.href = 'login.html';
-        } else {
-            document.getElementById('username').innerText = loggedInUser;
-        }
 
-        // Logout functionality
-        document.getElementById('logout').addEventListener('click', () => {
-            localStorage.removeItem('loggedInUser');
-            window.location.href = 'login.html';  // Redirect to login
+            // Close the modal
+            deleteModal.style.display = 'none';
         });
     </script>
 </body>
