--- a/index.html
+++ b/index.html
@@ -3,50 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LightLand Plugins</title>
+  <title>LightLand Plugins - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="logo">LightLand Plugins</div>
     <nav>
-      <a href="#home">Home</a>
-      <a href="#downloads">Downloads</a>
-      <a href="#info">Info</a>
+      <a href="index.html">Home</a>
+      <a href="downloads.html">Downloads</a>
+      <a href="info.html">Info</a>
     </nav>
   </header>
   
-  <section id="home">
-    <h1>Welcome to LightLand Plugins</h1>
-    <p>Your go-to destination for premium Minecraft plugins.</p>
-    <a href="#downloads" class="cta-button">Download Now</a>
-  </section>
-
-  <section id="downloads">
-    <h2>Plugin Downloads</h2>
-    <div class="plugin-list">
-      <div class="plugin">
-        <h3>Plugin Name</h3>
-        <p>Short description of the plugin.</p>
-        <a href="plugin-link.zip" class="download-button">Download</a>
-      </div>
-      <div class="plugin">
-        <h3>Another Plugin</h3>
-        <p>Short description of the plugin.</p>
-        <a href="plugin-link2.zip" class="download-button">Download</a>
-      </div>
-    </div>
-  </section>
-
-  <section id="info">
-    <h2>About Our Plugins</h2>
-    <p>LightLand Plugins provide innovative features to enhance your Minecraft experience.</p>
-    <ul>
-      <li>Easy to install and configure.</li>
-      <li>Supports the latest Minecraft versions.</li>
-      <li>Regular updates and bug fixes.</li>
-    </ul>
-  </section>
+  <main>
+    <section class="hero">
+      <h1>Welcome to LightLand Plugins</h1>
+      <p>Get the best plugins to enhance your Minecraft experience.</p>
+      <a href="downloads.html" class="cta-button">View Plugins</a>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2024 LightLand Plugins. All rights reserved.</p>
