--- a/downloads.html
+++ b/downloads.html
@@ -24,13 +24,13 @@
         <div class="plugin">
           <h3>BlockUIOpener</h3>
           <p>Opens block UIs like crafting, anvil, and brewing directly with commands.</p>
-          <a href="downloads/BlockUIOpener.zip" class="download-button">Download</a>
+          <a href="downloads/BlockUIOpener.zip" download class="download-button">Download</a>
         </div>
         
         <div class="plugin">
           <h3>PvPBorder</h3>
           <p>Create PvP-enabled zones with customizable messages.</p>
-          <a href="downloads/PvPBorder.zip" class="download-button">Download</a>
+          <a href="downloads/PvPBorder.zip" download class="download-button">Download</a>
         </div>
       </div>
     </section>
