--- a/downloads.html
+++ b/downloads.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LightLand Plugins - Downloads</title>
+  <title>Download Plugins</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <div class="logo">LightLand Plugins</div>
+    <div class="logo">Download Plugins</div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="downloads.html">Downloads</a>
-      <a href="info.html">Info</a>
+      <a href="index">Home</a>
+      <a href="downloads">Downloads</a>
+      <a href="info">Info</a>
       <a href="https://discord.gg/link">Discord</a>
     </nav>
   </header>
