--- a/index.html
+++ b/index.html
@@ -10,26 +10,39 @@
   <header>
     <div class="logo">LightLand Plugins</div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="downloads.html">Downloads</a>
-      <a href="info.html">Info</a>
+      <a href="index">Home</a>
+      <a href="downloads">Downloads</a>
+      <a href="info>Info</a>
+      <a href="https://discord.gg/link">Discord</a>
     </nav>
   </header>
   
   <main>
-    <section class="hero">
+    <section id="welcome">
       <h1>Welcome to LightLand Plugins</h1>
-      <p>Get the best plugins to enhance your Minecraft experience.</p>
-      <a href="downloads.html" class="cta-button">View Plugins</a>
+      <p>Your one-stop destination for high-quality Minecraft plugins.</p>
+    </section>
+    
+    <section id="about">
+      <h2>About</h2>
+      <p>All plugins on this website are created by <strong>iamsamir</strong> and are free to use. Designed to improve your Minecraft server experience, these plugins are crafted with precision and optimized for performance.</p>
+    </section>
+    
+    <section id="featured-plugins">
+      <h2>Featured Plugins</h2>
+      <ul>
+        <li><strong>DailyRewards:</strong> Reward players with daily login bonuses.</li>
+        <li><strong>Rename v2:</strong> Rename items with custom colors and effects.</li>
+        <li><strong>AdvancedAutoAuth:</strong> Auto-authenticate players by their IP for faster logins.</li>
+        <li><strong>Discord:</strong> Add a simple /discord command to your server.</li>
+      </ul>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 LightLand Plugins. All rights reserved.</p>
+    <p>&copy; 2024 LightLand Plugins. Created by iamsamir. All rights reserved.</p>
     <div class="social-links">
       <a href="https://discord.gg/link">Discord</a>
-      <a href="https://vote-link.com">Vote</a>
-      <a href="https://lightland.com">Website</a>
     </div>
   </footer>
 </body>
