--- a/downloads.html
+++ b/downloads.html
@@ -24,14 +24,14 @@
         <div class="plugin">
           <h3>DailyRewards</h3>
           <p>Reward your players with daily bonuses when they use /daily.</p>
-          <a href="downloads/DailyRewards.phar" download class="download-button">Download</a>
+          <a href="downloads/DailyRewards_v1.0.phar" download class="download-button">Download</a>
         </div>
         
         <!-- Rename v2 -->
         <div class="plugin">
           <h3>Rename v2</h3>
           <p>Rename items with custom colors permission rename.use.</p>
-          <a href="downloads/Renamev2.phar" download class="download-button">Download</a>
+          <a href="downloads/Rename_2.0.phar" download class="download-button">Download</a>
         </div>
         
         <!-- AdvancedAutoAuth -->
@@ -45,7 +45,7 @@
         <div class="plugin">
           <h3>Discord</h3>
           <p>Adds a /discord command to your server for sharing your server's Discord link.</p>
-          <a href="downloads/DiscordPlugin.phar" download class="download-button">Download</a>
+          <a href="downloads/Discord_v1.0.phar" download class="download-button">Download</a>
         </div>
       </div>
     </section>
