--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LightLand Plugins - Home</title>
+  <title>Plugins - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <div class="logo">LightLand Plugins</div>
+    <div class="logo">Home</div>
     <nav>
       <a href="index">Home</a>
       <a href="downloads">Downloads</a>
-      <a href="info>Info</a>
       <a href="https://discord.gg/link">Discord</a>
     </nav>
   </header>
