--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Download Plugins</div>
+    <div class="logo">Download</div>
     <nav>
       <a href="index">Home</a>
       <a href="downloads">Downloads</a>
