--- a/downloads.html
+++ b/downloads.html
@@ -31,7 +31,7 @@
         <div class="plugin">
           <h3>Rename v2</h3>
           <p>Rename items with custom colors permission rename.use.</p>
-          <a href="downloads/Rename_2.0.phar" download class="download-button">Download</a>
+          <a href="downloads/Rename_v2.0.phar" download class="download-button">Download</a>
         </div>
         
         <!-- AdvancedAutoAuth -->
