--- a/404.html
+++ b/404.html
@@ -10,7 +10,14 @@
   <div class="error-container">
     <h1 class="error-code">404</h1>
     <h2 class="error-message">Oops! The page you're looking for doesn't exist.</h2>
-    <a href="index" class="error-button">Go Back to Home</a>
-  </div>
+         <!-- Button that triggers the redirect -->
+    <button onclick="redirectToWebsite()">Go Back to Home</button>
+
+    <script>
+        function redirectToWebsite() {
+            // Replace the URL with the desired website
+            window.location.href = "https://iamsamir123.github.io";
+        }
+    </script>
 </body>
 </html>
