--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <h1 class="error-code">404</h1>
     <h2 class="error-message">Oops! The page you're looking for doesn't exist.</h2>
          <!-- Button that triggers the redirect -->
-    <button onclick="redirectToWebsite()">Go Back to Home</button>
+    <button class="error-button"onclick="redirectToWebsite()">Go Back to Home</button>
 
     <script>
         function redirectToWebsite() {
