--- a/downloads.html
+++ b/downloads.html
@@ -10,7 +10,7 @@
   <header>
     <div class="logo">Download</div>
     <nav>
-      <a href="index">Home</a>
+      <a href="/">Home</a>
       <a href="downloads">Downloads</a>
       <a href="https://discord.gg/link">Discord</a>
     </nav>
