--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c n q<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,6 @@
 </head>
 <body>
   <header>
-    <div class="logo">Home</div>
     <nav>
       <a href="index">Home</a>
       <a href="downloads">Downloads</a>
