--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ c n q<!DOCTYPE html>
 <body>
   <header>
     <nav>
+      <div>Home</div>
       <a href="index">Home</a>
       <a href="downloads">Downloads</a>
       <a href="https://discord.gg/link">Discord</a>
