--- a/index.html
+++ b/index.html
@@ -1,48 +1,26 @@
-c n q<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Minecraft Plugins</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-  <header>
-    <nav>
-      <div>Home</div>
-      <a href="index">Home</a>
-      <a href="downloads">Downloads</a>
-      <a href="https://discord.gg/link">Discord</a>
-    </nav>
-  </header>
-  
-  <main>
-    <section id="welcome">
-      <h1>Welcome to LightLand Plugins</h1>
-      <p>Your one-stop destination for high-quality Minecraft plugins.</p>
-    </section>
-    
-    <section id="about">
-      <h2>About</h2>
-      <p>All plugins on this website are created by <strong>iamsamir</strong> and are free to use. Designed to improve your Minecraft server experience, these plugins are crafted with precision and optimized for performance.</p>
-    </section>
-    
-    <section id="featured-plugins">
-      <h2>Featured Plugins</h2>
-      <ul>
-        <li><strong>DailyRewards:</strong> Reward players with daily login bonuses.</li>
-        <li><strong>Rename v2:</strong> Rename items with custom colors and effects.</li>
-        <li><strong>AdvancedAutoAuth:</strong> Auto-authenticate players by their IP for faster logins.</li>
-        <li><strong>Discord:</strong> Add a simple /discord command to your server.</li>
-      </ul>
-    </section>
-  </main>
 
-  <footer>
-    <p>&copy; 2024 LightLand Plugins. Created by iamsamir. All rights reserved.</p>
-    <div class="social-links">
-      <a href="https://discord.gg/link">Discord</a>
-    </div>
-  </footer>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="downloads.html">Downloads</a></li>
+            <div class="nav-underline"></div>
+        </ul>
+    </nav>
+
+    <section class="content">
+        <h1>Welcome to Minecraft Plugin Hub</h1>
+        <p>Find and download amazing plugins for your server.</p>
+    </section>
+
 </body>
 </html>
